# equation

./: .gitignore  pyproject.toml
equation/: __init__.py  equation.py
tests/: test_equation.py
